# simplify-payment-for-credit-card

./: Cargo.toml  Dioxus.toml  LICENSE  README.md  credit_cards.db
assets/styling/: create_card.css  credit_card.css  main.css  navbar.css
src/: backend.rs  card.html  main.rs
src/components/: color_generator.rs  create_card.rs  credit_card.rs  delete_card.rs  echo.rs  hero.rs  mod.rs  navbar.rs
src/views/: blog.rs  create_card.rs  credit_card.rs  delete_card.rs  home.rs  mod.rs
